# data-mining-coursework

./: .gitignore  INSTRUCTIONS.md  README.md  adult.py  adult_test.py  coronavirus_tweets.py  coursework.ipynb  pyproject.toml  test_coronavirus_tweets.py  test_task1.py  test_task2.py  test_task3.py  test_wholesale_customers.py  wholesale_customers.py
